--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- please send translation to jozein@sina.com  -->
+<!-- please save translation as utf-8 or utf-16(unicode) -->
+<!-- and send to jozein@sina.com  -->
 <resources>
 
     <!-- add translator name here if you want -->
